# jaxert

./: .gitignore  .gitmodules  README.md  deps.nix  dev-shell.sh  pyproject.toml
.github/workflows/: release.yml  test.yml
src/jaxert/: __init__.py  core.py
tests/: test_jaxert.py
